@@ -12,6 +12,7 @@ Bug fixes:
 - BBB : CPSDefault.utils.getHtmlBody
 - #852 : make logged_in more customizable
 - Fix for 3.2 migration
+- #914 : Existing instances of 'News' document type are broken.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
